# whisper.cpp.tt

./: CMakeLists.txt  tt-metal-tt-nn-overview.md
.devops/: main-ttnn.Dockerfile
cmake/: FindTTMetal.cmake
ggml/: CMakeLists.txt
ggml/include/: ggml-ttnn.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-ttnn/: CMakeLists.txt  ggml-ttnn.cpp
